# testhttp

./: Cargo.toml
_experiments/: commtest.rs  main.rs
_experiments/go_static/: main.go
_experiments/list/: Cargo.toml
_experiments/list/src/: main.rs
_experiments/post/: Cargo.toml
_experiments/test_chan_bug/: Cargo.toml
_experiments/test_clousers/: Cargo.toml
_experiments/test_enum/: Cargo.toml
_experiments/test_mutex_chan/: Cargo.toml  doc
_szkic_api/: api0  odbieranie posta  szkic_strumieniowania
doc/: __do_sprawdzenia  channel - mpmc  closures  csp  derive  eco  exif  htop  http  http2  json  kody_zakonczenia_procesu  mio - doc  orm  postgres  pulse - signals  rss  rust-types  server.txt  sized_sync_send  skrawki  testing
doc/_skrawki/: hashmap_connection.rs
doc/concept/: code_sheet.txt  dataflow.dia  overview.dia  overview.md  overview.txt
src/: TODO  __inne  _dom_builder  _draft  _main.rs  api1.rs  api2.rs  api3.rs  async.rs  connection.rs  main.rs  server.rs  signal_end.rs  statichttp.rs  thread.rs  todo  token_gen.rs
src/_experiments/: api3.rs
src/_old/: main.rs  signal_end.rs
src/api/: mod.rs
src/api_file/: get_file.rs  mod.rs
src/app/: mod.rs  statichttp.rs
src/app/_szkic/: api
src/asynchttp/: log.rs  mod.rs
src/experiments/: async.rs
src/miohttp/: connection.rs  hashmap_connection.rs  log.rs  mod.rs  request.rs  response.rs  server.rs
src/server/: mod.rs
src/thread_pool/: autoid.rs  inner.rs  mod.rs  receiver_id.rs  sender_id.rs  types.rs
src/worker/: mod.rs  render_request.rs
static/: index.html
static/cast/: 1-hello.html  2-badge.html  3-thumbnail.html  4-thumbnail-list.html  notes
(+38 files in other folders)
